# sqlbot

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  run_from_terminal.py  testing_bot.ipynb
backup-repo/: config  packed-refs
backup-repo/objects/pack/: pack-09b10edc6f3409ca808bf6518832f984217808eb.idx  pack-09b10edc6f3409ca808bf6518832f984217808eb.pack
chatbot/: __init__.py  helper_utils.py  sqlbot.py
input_data/: chinook_schema.csv
sqlbot/: README.md  pyproject.toml
sqlbot/src/sqlbot/: __init__.py
sqlbot/src/sqlbot/chatbot/: sqlbot.py
src/sqlbot/: run_app.py  run_as_app.py  run_from_terminal.py
src/sqlbot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/sqlbot/chatbot/: __init__.py  sqlbot.py
src/sqlbot/sqlbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
