[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlbot"
version = "0.1.0"
authors = [
  { name = "Andrew J. Carr", email = "andrewcarr24@github.com" },
]
description = "Command line tool for querying SQL databases with GPT."
readme = "README.md"
requires-python = ">=3.8.1,<4.0"
license = { text = "MIT License" }
keywords = ["LLMs", "agents"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "langchain-community==0.3.13",
    "langchain-openai==0.3.0",
    "python-dotenv>=1.0.1",
    "SQLAlchemy>=2.0.36",
    "langchain-core>=0.3.29",
    "typing-inspect>=0.9.0",
    "typing_extensions>=4.12.2"
]

[project.urls]
Homepage = "https://github.com/andrewcarr24/sqlbot"

[project.scripts]
start_bot_tool = "sqlbot.run_from_terminal:start_bot"