[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlbot"
version = "0.1.0"
requires-python = ">=3.11"
authors = [
  { name = "Andrew J. Carr", email = "andrewcarr24@github.com" },
]
description = "Command line tool for querying SQL databases through an LLM."
readme = "README.md"
license = { text = "MIT License" }
keywords = ["LLMs", "agents"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "langchain-community==0.3.13",
    "langchain-openai==0.3.0",
    "python-dotenv>=1.0.1",
    "SQLAlchemy>=2.0.36",
    "langchain-core>=0.3.29",
    "typing-inspect>=0.9.0",
    "typing_extensions>=4.12.2",
	"streamlit>=1.24.0",
	"altair==4.0"
]

[project.urls]
Homepage = "https://github.com/andrewcarr24/sqlbot"

[project.scripts]
start_bot_tool = "sqlbot.run_from_terminal:start_bot"
start_app = "sqlbot.run_app:main"